--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,12 @@
   "name": "Auth System - Secure Authentication",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
+      "src": "logo-design-by-xircons.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logo-design-by-xircons.png",
       "type": "image/png",
       "sizes": "512x512"
     }
